# messaging-service

./: .env  .env.example  .gitignore  INDEX.md  Makefile  README.md  alembic.ini  docker-compose.yml  init.sql  pyproject.toml  requirements-dev.in  requirements-dev.txt  requirements.in  requirements.txt
app/: database.py  main.py
app/clients/: base_provider_client.py  email_provider_client.py  sms_provider_client.py
app/models/: __init__.py
app/repositories/: __init__.py  base_repository.py  conversation_repository.py  message_repository.py  participant_repository.py
app/routers/: conversations.py  messages.py  webhooks.py
app/services/: get_conversation_messages_service.py  list_conversations_service.py  receive_email_webhook_service.py  receive_sms_mms_webhook_service.py  send_message_service.py
doc/: prd-feature-001-core-data-layer.md  prd-feature-002-send-message-service.md  prd-feature-003-sms-mms-webhook-processing.md  prd-feature-004-email-webhook-processing.md  prd-feature-005-list-conversations.md  prd-feature-006-get-conversation-messages.md
migrations/: env.py
migrations/versions/: 0d22580b00df_create_initial_schema.py  106672ee9542_initial_baseline.py
providers/: Dockerfile.email  Dockerfile.sms  README.md  cache.py  email_provider.py  sms_provider.py
tests/: conftest.py  test_clients.py  test_database.py  test_main.py  test_repositories.py
tests/routers/: test_conversations.py  test_messages.py  test_webhooks.py
tests/services/: test_get_conversation_messages_service.py  test_list_conversations_service.py  test_send_message_service.py  (+2 more)
(+9 files in other folders)
